Fix default vallues for annotations and fix overlapping zero length markers

--- a/app/assets/stylesheets/components/code_listing.css.scss
+++ b/app/assets/stylesheets/components/code_listing.css.scss
@@ -433,7 +433,7 @@ $annotation-info: $info;
         font: normal normal normal 14px/1 "Material Design Icons", sans-serif;
         position: absolute;
         content: "\F0143";
-        top: 7px;
+        top: 9px;
         left: -7px;
       }
     }
